# libd

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Hello  LICENSE  conanfile.py  devopsfile.py  test.txt
CMakeModules/: ConfigureBuildPaths.cmake  GenerateVersion.cmake  HelperFunctions.cmake  LibdConfig.cmake  LibdDefaultConfig.cmake  LibdToolchainConfig.cmake
doc/documentation/: concept_factory.md  dutil_logging.drawio.xml  libdutil_factory.drawio
extra/: README.md
extra/dpythonclass/: class.cpp  class.h  wizard.xml
extra/dtimeclass/: class.cpp  class.h  wizard.xml
extra/dtimetestsuite/: test.cpp  wizard.xml
extra/dutilclass/: class.cpp  class.h  wizard.xml
extra/dutiltestsuite/: test.cpp  wizard.xml
libdglobals/: CMakeLists.txt  globals.cpp  globals.h
libdio/: CMakeLists.txt  file.cpp  file.h
libdpython/: CMakeLists.txt  pythoninterface.cpp  pythoninterface.h  venv.cpp  venv.h
libdutil/: CMakeLists.txt  basictypes.cpp  basictypes.h  clock.cpp  clock.h  concretefactory.h  constructiondata.cpp  constructiondata.h  constructionvalidator.cpp  constructionvalidator.h  dataset.cpp  dataset.h  datasetrule.cpp  datasetrule.h  exception.cpp  exception.h  factory.cpp  factory.h  factoryinterface.cpp  factoryinterface.h  fileloggingsink.cpp  fileloggingsink.h  loggingsink.cpp  loggingsink.h  loggingsource.cpp  loggingsource.h  logitem.cpp  logitem.h  namedclass.h  namedenum.cpp  namedenum.h  namedparameter.h  namedreference.cpp  namedreference.h  namedreferenceparameter.h  now.cpp  now.h  overload.h  projectware.cpp  projectware.h  (+23 more)
libdversion/: CMakeLists.txt
libversion/: CMakeLists.txt  version.h.in
tests/: CMakeLists.txt  cat.cpp  cat.h  compoundware.cpp  compoundware.h  factorytestsexampleclass.cpp  factorytestsexampleclass.h  main.cpp  testbase.cpp  testbase.h  testdummy.cpp  testdummy.h  trivialware.h  zoo.cpp  zoo.h
tests/libdpython/: scripttests.cpp  systemenvironmenttests.cpp
tests/libdutil/: basictypestests.cpp  clocktests.cpp  constructiondatatests.cpp  constructionvalidatortests.cpp  datasettests.cpp  factoryinterfacetests.cpp  factorytests.cpp  loggingtests.cpp  namedclasstests.cpp  namedenumtests.cpp  namedparametertests.cpp  namedreferencetests.cpp  settingruletests.cpp  settingstests.cpp  utilitytests.cpp  varianttests.cpp  versiontests.cpp  waretests.cpp
tests/libdversion/: versiontests.cpp
tests/libtesting/: CMakeLists.txt  compoundware.cpp  compoundware.h  factorytestsexampleclass.cpp  testdummy.h  testdummyinterface.cpp  testdummyinterface.h  trivialware.cpp  trivialware.h
tests/libtesting/zoo/: cat.cpp  cat.h  zoo.cpp  zoo.h
tests/test_data/logging/: log.txt
